@@ -2,6 +2,6 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.QC">
-        <property name="version" value="--Data QC pipeline   -- version 2021-12-22" />
+        <property name="version" value="--Data QC pipeline   -- build Mar 29, 2022" />
     </bean>
 </beans>
