@@ -3,7 +3,7 @@
     <Appenders>
         <Console name="Console" target="SYSTEM_OUT">
             <!-- <PatternLayout pattern="%d{HH:mm:ss} [%t] %-5level %logger{36} - %msg%n"/> -->
-            <PatternLayout pattern="[%d{yyyy-MM-hh HH:mm:ss}] %msg%n"/>
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] %msg%n"/>
         </Console>
 
         <RollingFile name="status" append="true" fileName="logs/status.log" filePattern="logs/status.log.%d{yyyy-MM}">
@@ -67,6 +67,16 @@
             <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
         </File>
 
+        <RollingFile name="duplicate_alleles" append="true" fileName="logs/duplicate_alleles.log" filePattern="logs/duplicate_alleles.log.%d{yyyy-MM}">
+            <PatternLayout pattern="[%d] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
+        <File name="duplicate_alleles_simple" append="false" fileName="logs/duplicate_alleles_simple.log">
+            <PatternLayout pattern="%m%n"/>
+            <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
+        </File>
 
         <RollingFile name="deleted_aliases" append="true" fileName="logs/deleted_aliases.log" filePattern="logs/deleted_aliases.log.%d{yyyy-MM}">
             <PatternLayout pattern="[%d] - %m%n"/>
@@ -111,8 +121,13 @@
             <AppenderRef ref="Console" level="info"/>
         </Logger>
         <Logger name="qtls_with_inactive_markers" level="debug" additivity="false">
+            <AppenderRef ref="qtls_with_inactive_markers_simple"/>
             <AppenderRef ref="qtls_with_inactive_markers"/>
-            <AppenderRef ref="qtls_with_inactive_markers"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+        <Logger name="duplicate_alleles" level="debug" additivity="false">
+            <AppenderRef ref="duplicate_alleles_simple"/>
+            <AppenderRef ref="duplicate_alleles"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
 
