@@ -1,3 +1,6 @@
+Mar 29, 2022
+  added reporting of gene alleles with same symbols / names
+
 2021-12-22
   updated log4j to avoid zero day exploit
 
